--- a/statics/style.css
+++ b/statics/style.css
@@ -15,103 +15,62 @@ input {
 
 header {
     background-color: #0F7398;
-}
-
-#header_contents {
-    height: 102px;
+    height: 51px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     color: #FFFFFF;
 }
 
+
 #input input {
     border: 0px solid #0F7398;
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: #E6E6E6;
-    background-image: url("../images/Icon feather-search.svg");
+    background-image: url("../images/mobile/Icon ionic-ios-search.svg");
     background-repeat: no-repeat;
     background-position: 2px;
-    width: 536px;
-    height: 38px;
-    padding: 12px 12px 12px 38px;
-    font-size: 22px;
+    width: 100%;
+    height: 25px;
+    padding: 8px 8px 8px 20px;
+    font-size: 14px;
+}
+
+
+#header_navs::before{
+    content: url("../images/mobile/Icon\ ionic-ios-menu.svg");
 }
 
 #header_navs > ul {
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-}
-
-#header_navs > ul > li {
-    display: inline-block;
-}
-
-#header_navs > ul > li:first-child {
-    margin: 0 12px 0px 0; 
-}
-
-#header_navs > ul > li:nth-child(2) {
-    margin: 0 12px 0 0; 
-}
-
-#header_navs > ul > li:nth-child(3) {
-    margin: 0px 0px 0 0;
-    color: white;
-}
-
-main {
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba(243, 243, 243, 0.81) !important;
-    background-image: url("../images/Group 11.svg");
-    background-blend-mode: lighten;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    width: 100%;
-    height: 86.5vh;
+    visibility: hidden;
+    position: relative;
+    top: 38px;
+    background-color: #0F7398;
+    list-style: none;
+    border: 1px solid #0F7398;
 }
 
 
-#circle_float {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    bottom: 30px;
-    right: 100px;
-    background-color: #ECECEC;
-    box-shadow:  0 0 3px #333;
-    cursor: pointer;
+#header_navse > ul li:nth-child(2) {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-#create_button {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
-    height: inherit;
-}
-
-#circle_text {
-    color: #0F7398;
+#header_navs > ul li:nth-child(3) {
+    text-align: center;
 }
 
 #modal_flex {
     visibility: hidden;
     position: absolute;
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
-    top: 35%;
-    left: 30%;
+    top: 25%;
+    left: 10%;
     background-color: #FFFFFF;
     text-align: center;
-    width: auto;
+    width: 50vmax;
     height: auto;
     box-shadow:  0 0 3px #333;
     border-radius: 1%;
@@ -129,7 +88,7 @@ main {
     border: 0px solid #0F7398;
     border-radius: 4px;
     background-color: #FFFFFF;
-    width: 536px;
+    width: 100%;
     height: 38px;
     padding: 12px 12px 12px 18px;
     font-size: 22px;
@@ -166,4 +125,111 @@ main {
     background-color: #0F7398;
     border: 1px solid #0F7398;
     color: #FFFFFF;
+}
+
+#circle_float, #modal_flex {
+    visibility: hidden;
+}
+
+@media screen and (max-width: 200px) {
+    header {
+        width: 200px;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    header {
+        height: 102px;
+    }
+    
+    #input input {
+        border-radius: 4px;
+        background-image: url("../images/Icon feather-search.svg");
+        width: 536px;
+        height: 38px;
+        padding: 12px 12px 12px 38px;
+        font-size: 22px;
+    }
+    
+    #header_navs::before{
+        content: "";
+    }
+
+    #header_navs > ul {
+        display: flex;
+        align-items: center;
+        list-style-type: none;
+    }
+    
+    #header_navs > ul > li {
+        display: inline-block;
+    }
+    
+    #header_navs > ul > li:first-child {
+        margin: 0 12px 0px 0; 
+    }
+    
+    #header_navs > ul > li:nth-child(2) {
+        margin: 0 12px 0 0; 
+    }
+    
+    #header_navs > ul > li:nth-child(3) {
+        margin: 0px 0px 0 0;
+        color: white;
+    }
+    
+    main {
+        display: flex;
+        justify-content: space-around;
+        background-color: rgba(243, 243, 243, 0.81) !important;
+        background-image: url("../images/Group 11.svg");
+        background-blend-mode: lighten;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        width: 100%;
+        height: 86.5vh;
+    }
+
+    #circle_float, #modal_flex {
+        visibility: visible;
+    }
+    
+    
+    #circle_float {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        bottom: 30px;
+        right: 100px;
+        background-color: #ECECEC;
+        box-shadow:  0 0 3px #333;
+        cursor: pointer;
+    }
+    
+    #create_button {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 50%;
+        height: inherit;
+    }
+    
+    #circle_text {
+        color: #0F7398;
+    }
+    
+    #modal_flex {
+        top: 35%;
+        left: 25%;        
+        width: 650px;
+    }
+
+    #modal_input_text > input {
+        width: 100%;
+    }
 }
